Ajout dans la base de données d un personnel sans distinction via le formulaire de test. Ne fonctionne qu une fois car pas auto increment pour ID de personnel

--- a/test.html
+++ b/test.html
@@ -32,6 +32,10 @@
 			<input id ="firstname" name ="firstname" type="text"></input>
 			<br/>
 			
+			<label for="pw"> Entrez votre email</label>
+			<input id ="mail" name ="mail" type="text"></input>
+			<br/>
+			
 			<input type="submit" value="Ajouter Personnel">
 		</form>
 		
