Ajout des liens fonctionnel avec dist, page planning et ajout heure

--- a/silex/front_office/app/home/components.html
+++ b/silex/front_office/app/home/components.html
@@ -1,10 +1,7 @@
-
-  <h1>{{title}}</h1>
-  <ul>
-    <li *ngFor="let prof of profs" (click)="onSelect(prof)"><h5>{{prof.name}}</h5></li>
-  </ul>
-  <div *ngIf="selectedProf">
-    Details : {{selectedProf.id}}
-  </div>
-  <detail [prof]="selectedProf"></detail>
-  
+<sd-toolbar></sd-toolbar>
+<sd-navbar></sd-navbar>
+<router-outlet></router-outlet>
+<footer><hr />
+Université de la rochelle
+<hr />
+</footer>
