Mise en place du bootstrap pour le front office

--- a/silex/front_office/app/home/components.html
+++ b/silex/front_office/app/home/components.html
@@ -1,7 +1,8 @@
 <sd-toolbar></sd-toolbar>
 <sd-navbar></sd-navbar>
 <router-outlet></router-outlet>
-<footer><hr />
-Université de la rochelle
-<hr />
+<footer>
+  <hr />
+  Université de la rochelle
+  <hr />
 </footer>
