--- a/silex/front_office/index.html
+++ b/silex/front_office/index.html
@@ -21,6 +21,9 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <script src="https://code.angularjs.org/2.0.0-beta.0/http.dev.js"></script>
 
+    <script src="node_modules/chart.js/src/chart.js"></script>
+
+
     <script>
       System.import('app').catch(function(err){ console.error(err); });
     </script>
